--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"browserify-middleware": "^8.1.1",
+		"copy-to-clipboard": "^3.0.8",
 		"express": "^4.16.3",
 		"express-bearer-token": "^2.2.0",
 		"express-jsonschema": "^1.1.6",
@@ -24,7 +25,6 @@
 		"pouchdb": "^7.0.0",
 		"pushover": "^1.3.6",
 		"react": "^16.4.2",
-		"react-copy-to-clipboard": "^5.0.1",
 		"react-dom": "^16.4.2",
 		"sd-notify": "^2.3.0",
 		"semantic-ui-react": "^0.82.2",
