--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"copy-to-clipboard": "^3.0.8",
 		"express": "^4.16.3",
 		"express-bearer-token": "^2.2.0",
-		"express-jsonschema": "^1.1.6",
+		"express-openapi-middleware": "git+https://github.com/keijokapp/express-openapi-middleware.git",
 		"express-winston": "^3.0.0",
 		"jsonschema": "^1.2.4",
 		"node-fetch": "^2.2.0",
@@ -27,6 +27,7 @@
 		"react-dom": "^16.4.2",
 		"sd-notify": "^2.3.0",
 		"semantic-ui-react": "^0.82.2",
+		"swagger-ui-express": "^4.0.0",
 		"table-dragger": "^1.0.2",
 		"uniqid": "^5.0.3",
 		"uuid": "^3.3.0",
