--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"build": "babel lib --out-dir dist"
 	},
 	"browser": {
-		"./lib/config.js": "./lib/config-browser.js",
-		"./lib/request.js": "./lib/request-browser.js"
+		"./lib/config.js": "./lib/config-browser.js"
 	},
 	"dependencies": {
 		"browserify-middleware": "^8.1.1",
