--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
 		"pushover": "^1.3.6",
 		"react": "^16.4.2",
 		"react-dom": "^16.4.2",
-		"sd-notify": "^2.3.0",
 		"semantic-ui-react": "^0.82.2",
 		"swagger-ui-express": "^4.0.0",
 		"table-dragger": "^1.0.2",
 		"uniqid": "^5.0.3",
 		"uuid": "^3.3.0",
 		"winston": "^3.0.0"
+	},
+	"optionalDependencies": {
+		"sd-notify": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
