--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
 	"plugins": [ "@babel/transform-modules-commonjs", "@babel/syntax-object-rest-spread" ],
-	"presets": [ "@babel/react" ]
+	"presets": [ "@babel/react" ],
+	"env": {
+		"production": {
+			"comments": false,
+			"minified": true,
+			"presets": [ [ "minify", { builtIns: false } ] ]
+		}
+	}
 }
