--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"./lib/config.js": "./lib/config-browser.js"
 	},
 	"dependencies": {
+		"ajv": "^6.8.1",
 		"babel-preset-minify": "^0.5.0",
 		"browserify-middleware": "^8.1.1",
 		"copy-to-clipboard": "^3.0.8",
@@ -19,7 +20,6 @@
 		"express-bearer-token": "^2.2.0",
 		"express-openapi-middleware": "git+https://github.com/keijokapp/express-openapi-middleware.git#1.0.0",
 		"express-winston": "^3.0.0",
-		"jsonschema": "^1.2.4",
 		"node-fetch": "^2.2.0",
 		"pouchdb": "^7.0.0",
 		"pouchdb-seed-design": "^0.3.0",
