--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-	"plugins": [ "transform-es2015-modules-commonjs", "syntax-object-rest-spread" ],
-	"presets": [ "react" ]
+	"plugins": [ "transform-es2015-modules-commonjs" ],
+	"presets": [ "@babel/react" ]
 }
