--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
 	},
 	"dependencies": {
 		"browserify-middleware": "^8.1.1",
-		"copy-to-clipboard": "^3.0.8",
-		"express": "^4.16.3",
-		"express-bearer-token": "^2.2.0",
+		"copy-to-clipboard": "^3.2.0",
+		"express": "^4.1.7",
+		"express-bearer-token": "^2.4.0",
 		"express-openapi-middleware": "git+https://github.com/keijokapp/express-openapi-middleware.git",
-		"express-winston": "^3.0.0",
+		"express-winston": "^4.0.1",
 		"jsonschema": "^1.2.4",
-		"node-fetch": "^2.2.0",
-		"pouchdb": "^7.0.0",
+		"node-fetch": "^2.6.0",
+		"pouchdb": "^7.1.1",
 		"pouchdb-seed-design": "^0.3.0",
 		"pushover": "^1.3.6",
-		"react": "^16.4.2",
-		"react-dom": "^16.4.2",
-		"semantic-ui-react": "^0.82.2",
-		"swagger-ui-express": "^4.0.0",
-		"table-dragger": "^1.0.2",
-		"uniqid": "^5.0.3",
-		"uuid": "^3.3.0",
-		"winston": "^3.0.0"
+		"react": "16.11.0",
+		"react-dom": "^16.11.0",
+		"semantic-ui-react": "^0.88.1",
+		"swagger-ui-express": "^4.1.2",
+		"table-dragger": "^1.0.3",
+		"uniqid": "^5.1.0",
+		"uuid": "^3.3.3",
+		"winston": "^3.2.1"
 	},
 	"optionalDependencies": {
-		"sd-notify": "^2.3.0"
+		"sd-notify": "^2.7.2"
 	},
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-plugin-syntax-object-rest-spread": "^6.13.0",
-		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-		"babel-preset-react": "^6.24.1",
-		"babelify": "^8.0.0"
+		"@babel/cli": "^7.7.0",
+		"@babel/core": "^7.7.0",
+		"@babel/plugin-transform-modules-commonjs": "^7.7.0",
+		"@babel/preset-react": "^7.7.0",
+		"babelify": "^7.7.0"
 	}
 }
