--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
 	"license": "MIT",
 	"bin": "./dist/index.js",
 	"scripts": {
-		"build": "babel lib --out-dir dist"
+		"build": "babel lib --out-dir dist",
+		"lint": "eslint lib"
 	},
 	"dependencies": {
 		"browserify-middleware": "^8.1.1",
 		"copy-to-clipboard": "^3.2.0",
 		"express": "^4.1.7",
 		"express-bearer-token": "^2.4.0",
-		"express-openapi-middleware": "git+https://github.com/keijokapp/express-openapi-middleware.git",
+		"express-openapi-middleware": "^1.2.1",
 		"express-winston": "^4.0.1",
 		"jsonschema": "^1.2.4",
 		"node-fetch": "^2.6.0",
@@ -37,6 +38,12 @@
 		"@babel/core": "^7.7.0",
 		"@babel/plugin-transform-modules-commonjs": "^7.7.0",
 		"@babel/preset-react": "^7.7.0",
-		"babelify": "^10.0.0"
+		"babel-eslint": "^10.0.3",
+		"babelify": "^10.0.0",
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.18.3"
 	}
 }
