--- a/package.json
+++ b/package.json
@@ -17,33 +17,33 @@
 	},
 	"dependencies": {
 		"browserify-middleware": "^8.1.1",
-		"copy-to-clipboard": "^3.2.0",
-		"express": "^4.1.7",
+		"copy-to-clipboard": "^3.3.1",
+		"express": "^4.17.1",
 		"express-bearer-token": "^2.4.0",
 		"express-openapi-middleware": "^1.2.1",
-		"express-winston": "^4.0.1",
-		"jsonschema": "^1.2.4",
+		"express-winston": "^4.0.3",
+		"jsonschema": "^1.2.5",
 		"node-fetch": "^2.6.0",
-		"pouchdb": "^7.1.1",
+		"pouchdb": "^7.2.1",
 		"pouchdb-seed-design": "^0.3.0",
 		"pushover": "^1.3.6",
-		"react": "16.11.0",
-		"react-dom": "^16.11.0",
-		"semantic-ui-react": "^0.88.1",
-		"swagger-ui-express": "^4.1.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"semantic-ui-react": "^0.88.2",
+		"swagger-ui-express": "^4.1.3",
 		"table-dragger": "^1.0.3",
-		"uniqid": "^5.1.0",
-		"uuid": "^3.3.3",
+		"uniqid": "^5.2.0",
+		"uuid": "^3.4.0",
 		"winston": "^3.2.1"
 	},
 	"optionalDependencies": {
-		"sd-notify": "^2.7.2"
+		"sd-notify": "^2.8.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.7.0",
-		"@babel/core": "^7.7.0",
-		"@babel/plugin-transform-modules-commonjs": "^7.7.0",
-		"@babel/preset-react": "^7.7.0",
+		"@babel/cli": "^7.8.4",
+		"@babel/core": "^7.8.4",
+		"@babel/plugin-transform-modules-commonjs": "^7.8.3",
+		"@babel/preset-react": "^7.8.3",
 		"babel-eslint": "^10.0.3",
 		"babelify": "^10.0.0",
 		"eslint": "^6.8.0",
