--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"express-bearer-token": "^2.4.0",
 		"express-openapi-middleware": "^1.2.1",
 		"express-winston": "^4.0.3",
+		"js-yaml": "^3.13.1",
 		"jsonschema": "^1.2.5",
 		"node-fetch": "^2.6.0",
 		"pouchdb": "^7.2.1",
