--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"lint": "eslint lib"
 	},
 	"dependencies": {
+		"ajv": "^6.12.0",
 		"browserify-middleware": "^8.1.1",
 		"copy-to-clipboard": "^3.3.1",
 		"express": "^4.17.1",
@@ -23,7 +24,6 @@
 		"express-openapi-middleware": "^1.2.1",
 		"express-winston": "^4.0.3",
 		"js-yaml": "^3.13.1",
-		"jsonschema": "^1.2.5",
 		"node-fetch": "^2.6.0",
 		"pouchdb": "^7.2.1",
 		"pouchdb-seed-design": "^0.3.0",
