--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "no-restricted-syntax": "off",
     "no-shadow": "off",
     "no-tabs": "off",
+    "no-throw-literal": "off",
     "no-underscore-dangle": ["error", { "allow": ["_id", "_rev"] }],
     "no-unused-vars": ["error", { "args": "none" }],
     "no-use-before-define": "off",
