--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
 		"express-bearer-token": "^2.4.0",
 		"express-openapi-middleware": "^1.2.1",
 		"express-winston": "^4.0.3",
+		"foundationdb": "^0.10.3",
 		"js-yaml": "^3.13.1",
 		"node-fetch": "^2.6.0",
-		"pouchdb": "^7.2.1",
-		"pouchdb-seed-design": "^0.3.0",
 		"pushover": "^1.3.6",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
