--- a/.eslintrc
+++ b/.eslintrc
@@ -1,49 +1,40 @@
-{
-  "extends": "airbnb",
-  "overrides": [{
-    "files": ["lib/public/*", "lib/views/*"],
-    "env": {
-      "browser": true
-    },
-    "globals": {
-      "config": "readonly"
-    },
-    "rules": {
-      "no-console": "off"
-    }
-  }],
-  "rules": {
-    "arrow-body-style": "off",
-    "arrow-parens": ["error", "as-needed"],
-    "max-classes-per-file": "off",
-    "comma-dangle": ["error", "never"],
-    "consistent-return": "off",
-    "default-case": "off",
-    "func-names": "off",
-    "guard-for-in": "off",
-    "import/prefer-default-export": "off",
-    "indent": ["error", "tab"],
-    "no-await-in-loop": "off",
-    "no-bitwise": "off",
-    "no-mixed-operators": "off",
-    "no-nested-ternary": "off",
-    "no-param-reassign": "off",
-    "no-plusplus": "off",
-    "no-restricted-syntax": "off",
-    "no-shadow": "off",
-    "no-tabs": "off",
-    "no-throw-literal": "off",
-    "no-underscore-dangle": ["error", { "allow": ["_id", "_rev"] }],
-    "no-unused-vars": ["error", { "args": "none" }],
-    "no-use-before-define": "off",
-    "object-curly-newline": "off",
-    "react/jsx-filename-extension": "off",
-    "react/jsx-indent": ["error", "tab"],
-    "react/jsx-indent-props": ["error", "tab"],
-    "react/jsx-max-props-per-line": "off",
-    "react/no-array-index-key":  "off",
-    "react/no-string-refs": "off",
-    "react/no-find-dom-node": "off",
-    "react/prop-types": "off",
-  }
-}
+extends: airbnb
+
+plugins:
+  - react
+
+overrides:
+  - files: ["lib/public/*", "lib/views/*"]
+    env:
+      browser: true
+    globals:
+      config: readonly
+    rules:
+      no-console: off
+
+rules:
+  arrow-body-style: off
+  arrow-parens: ["error", "as-needed"]
+  comma-dangle: ["error", "never"]
+  consistent-return: off
+  default-case: off
+  func-names: off
+  guard-for-in: off
+  import/extensions: ["error", "ignorePackages"]
+  indent: ["error", "tab"]
+  no-await-in-loop: off
+  no-mixed-operators: off
+  no-nested-ternary: off
+  no-param-reassign: off
+  no-plusplus: off
+  no-restricted-syntax: off
+  no-shadow: off
+  no-tabs: off
+  no-underscore-dangle: ["error", { "allow": ["_id", "_rev"] }]
+  no-use-before-define: off
+  react/jsx-filename-extension: off
+  react/jsx-indent: ["error", "tab"]
+  react/jsx-indent-props: ["error", "tab"]
+  react/jsx-max-props-per-line: off
+  react/no-array-index-key:  off
+  react/prop-types: off
